# lab6

./: Cargo.toml
client/: Cargo.toml
client/src/: ai_module.rs  main.rs
server/: Cargo.toml
server/src/: ai_module.rs  main.rs
