[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
uuid = { version = "1.0", features = ["v4"] }
candle-core = { version = "0.4", features = ["cuda"] }
candle-nn = { version = "0.4" }
candle-datasets = "0.4"
hf-hub = { version = "0.3", features = ["tokio"] }
clap = { version = "4.5.1", features = ["derive"] }
anyhow = "1"